--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,6 +40,6 @@
     </security-constraint>
 
     <welcome-file-list>
-        <welcome-file>listPersons.xhtml</welcome-file>
+        <welcome-file>listDisciplines.xhtml</welcome-file>
     </welcome-file-list>
 </web-app>
