--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,6 @@
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 		  http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
          version="3.0">
-    <servlet>
-        <servlet-name>javax.ws.rs.core.Application</servlet-name>
-        <load-on-startup>1</load-on-startup>
-    </servlet>
-
-    <servlet-mapping>
-        <servlet-name>javax.ws.rs.core.Application</servlet-name>
-        <url-pattern>/rest/*</url-pattern>
-    </servlet-mapping>
 
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
@@ -40,6 +31,6 @@
     </security-constraint>
 
     <welcome-file-list>
-        <welcome-file>listDisciplines.xhtml</welcome-file>
+        <welcome-file>../index.html</welcome-file>
     </welcome-file-list>
 </web-app>
